data/all_generated_tests/raw_wast_tests/nop_StackCorruption_142.wast
;; 3. **Test Description**:    Place multiple consecutive `nop` instructions within a block that performs arithmetic operations. Verify the stack state remains consistent through the sequence of `nop` instructions.    **Constraint Checked**: Confirms multiple `nop`s consecutively do not affect the stack.    **Relation to Stack Corruption**: Improper handling could lead to stack underflows or type mismatches in subsequent operations.

(assert_invalid
  (module
    (func $test
      (i32.const 5)
      (nop)
      (nop)
      (nop)
      (i32.add)
    )
  )
  "type mismatch"
)